--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,22 @@ test/
 
 # End of https://www.toptal.com/developers/gitignore/api/node,dotnetcore,vue
 
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
