--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -10,8 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
    <!-- Swagger -->
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <!-- Added as part of this: https://github.com/cornflourblue/dotnet-5-jwt-authentication-api -->
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.13.1" />
+    <!-- Added as part of this: https://github.com/cornflourblue/dotnet-5-jwt-authentication-api System.IdentityModel.Tokens.Jwt-->
   </ItemGroup>
 
 </Project>
