--- a/api/api.csproj
+++ b/api/api.csproj
@@ -7,10 +7,14 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis.Auth" Version="1.55.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.11" />
    <!-- Swagger -->
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <!-- Added as part of this: https://github.com/cornflourblue/dotnet-5-jwt-authentication-api System.IdentityModel.Tokens.Jwt-->
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\BackendService\BackendService.csproj" />
   </ItemGroup>
 
 </Project>
